ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-app-ingress
  namespace: vk67220-ns

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app.metatechz.store

      secretName: employee-app-tls

  rules:
    - host: app.metatechz.store

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: employee-app-svc

                port:
                  number: 80
